--- a/peprs.ui
+++ b/peprs.ui
@@ -6539,7 +6539,7 @@ QFrame{background-color:#d1d5de}</string>
                                  <x>0</x>
                                  <y>0</y>
                                  <width>286</width>
-                                 <height>589</height>
+                                 <height>742</height>
                                 </rect>
                                </property>
                                <property name="minimumSize">
@@ -37033,8 +37033,8 @@ Analyzer</string>
                             <rect>
                              <x>0</x>
                              <y>0</y>
-                             <width>590</width>
-                             <height>500</height>
+                             <width>605</width>
+                             <height>956</height>
                             </rect>
                            </property>
                            <property name="minimumSize">
@@ -37199,19 +37199,6 @@ Analyzer</string>
                                </item>
                               </widget>
                              </item>
-                             <item row="11" column="0">
-                              <widget class="QLabel" name="label_2">
-                               <property name="font">
-                                <font>
-                                 <family>Arial</family>
-                                 <pointsize>9</pointsize>
-                                </font>
-                               </property>
-                               <property name="text">
-                                <string>Maximum Sample Rate:</string>
-                               </property>
-                              </widget>
-                             </item>
                              <item row="7" column="1" colspan="2">
                               <widget class="QComboBox" name="iChannel_awg">
                                <property name="font">
@@ -37267,7 +37254,7 @@ Analyzer</string>
                                 </font>
                                </property>
                                <property name="text">
-                                <string>Model:</string>
+                                <string>Bit Resolution</string>
                                </property>
                               </widget>
                              </item>
@@ -37281,32 +37268,6 @@ Analyzer</string>
                                </property>
                                <property name="text">
                                 <string>Hz</string>
-                               </property>
-                              </widget>
-                             </item>
-                             <item row="11" column="1">
-                              <widget class="QLineEdit" name="maxSampleRate_awg">
-                               <property name="enabled">
-                                <bool>false</bool>
-                               </property>
-                               <property name="minimumSize">
-                                <size>
-                                 <width>30</width>
-                                 <height>24</height>
-                                </size>
-                               </property>
-                               <property name="font">
-                                <font>
-                                 <family>Arial</family>
-                                 <pointsize>9</pointsize>
-                                </font>
-                               </property>
-                               <property name="toolTip">
-                                <string>The 12 bit model has a max. sampling rate of 12e9 Sa/s.
-The 14 bit model has a max. sampling rate of 8e9 Sa/s.</string>
-                               </property>
-                               <property name="text">
-                                <string/>
                                </property>
                               </widget>
                              </item>
@@ -37347,30 +37308,17 @@ The 14 bit model has a max. sampling rate of 8e9 Sa/s.</string>
                                </item>
                                <item>
                                 <property name="text">
-                                 <string>M8190A (14 bit)</string>
+                                 <string>14 Bit</string>
                                 </property>
                                </item>
                                <item>
                                 <property name="text">
-                                 <string>M8190A (12 bit)</string>
+                                 <string>12 Bit</string>
                                 </property>
                                </item>
                               </widget>
                              </item>
-                             <item row="11" column="2">
-                              <widget class="QLabel" name="label_759">
-                               <property name="font">
-                                <font>
-                                 <family>Arial</family>
-                                 <pointsize>9</pointsize>
-                                </font>
-                               </property>
-                               <property name="text">
-                                <string>Sa/s</string>
-                               </property>
-                              </widget>
-                             </item>
-                             <item row="14" column="0">
+                             <item row="15" column="0">
                               <widget class="QLabel" name="label_8">
                                <property name="font">
                                 <font>
@@ -37415,7 +37363,7 @@ The 14 bit model has a max. sampling rate of 8e9 Sa/s.</string>
                                </property>
                               </widget>
                              </item>
-                             <item row="14" column="1" colspan="2">
+                             <item row="15" column="1" colspan="2">
                               <widget class="QLineEdit" name="partNum_awg">
                                <property name="enabled">
                                 <bool>false</bool>
@@ -37448,6 +37396,58 @@ The 14 bit model has a max. sampling rate of 8e9 Sa/s.</string>
                                </property>
                                <property name="text">
                                 <string>AWG - General Settings</string>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="13" column="0">
+                              <widget class="QLabel" name="label_2">
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="text">
+                                <string>Maximum Sample Rate:</string>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="13" column="1">
+                              <widget class="QLineEdit" name="maxSampleRate_awg">
+                               <property name="enabled">
+                                <bool>false</bool>
+                               </property>
+                               <property name="minimumSize">
+                                <size>
+                                 <width>30</width>
+                                 <height>24</height>
+                                </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="toolTip">
+                                <string>The 12 bit model has a max. sampling rate of 12e9 Sa/s.
+The 14 bit model has a max. sampling rate of 8e9 Sa/s.</string>
+                               </property>
+                               <property name="text">
+                                <string/>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="13" column="2">
+                              <widget class="QLabel" name="label_759">
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="text">
+                                <string>Sa/s</string>
                                </property>
                               </widget>
                              </item>
@@ -38037,7 +38037,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                     <item>
                      <widget class="QStackedWidget" name="vsgEquipStackAdv">
                       <property name="currentIndex">
-                       <number>1</number>
+                       <number>0</number>
                       </property>
                       <widget class="QWidget" name="awgSettingsAdv">
                        <layout class="QHBoxLayout" name="horizontalLayout_12">
@@ -38058,7 +38058,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                              <x>0</x>
                              <y>0</y>
                              <width>629</width>
-                             <height>500</height>
+                             <height>956</height>
                             </rect>
                            </property>
                            <property name="minimumSize">
@@ -38078,7 +38078,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                               <x>10</x>
                               <y>10</y>
                               <width>311</width>
-                              <height>101</height>
+                              <height>161</height>
                              </rect>
                             </property>
                             <property name="minimumSize">
@@ -38103,7 +38103,42 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                              <string/>
                             </property>
                             <layout class="QGridLayout" name="gridLayout_2">
-                             <item row="2" column="1" colspan="2">
+                             <item row="3" column="0">
+                              <widget class="QLabel" name="label_34">
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="text">
+                                <string>Sample Marker Out:</string>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="3" column="2">
+                              <widget class="QLineEdit" name="sampleMarker_awg">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>30</width>
+                                 <height>24</height>
+                                </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="toolTip">
+                                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Full scale voltage amplitude.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                               </property>
+                               <property name="text">
+                                <string>1.5</string>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="2" column="2" colspan="2">
                               <widget class="QComboBox" name="trigMode_awg">
                                <property name="font">
                                 <font>
@@ -38113,6 +38148,9 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                                <property name="layoutDirection">
                                 <enum>Qt::LeftToRight</enum>
+                               </property>
+                               <property name="currentIndex">
+                                <number>1</number>
                                </property>
                                <item>
                                 <property name="text">
@@ -38149,7 +38187,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                               </widget>
                              </item>
-                             <item row="1" column="2">
+                             <item row="1" column="3">
                               <widget class="QLabel" name="label_35">
                                <property name="font">
                                 <font>
@@ -38175,7 +38213,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                               </widget>
                              </item>
-                             <item row="0" column="0" colspan="2">
+                             <item row="0" column="0" colspan="3">
                               <widget class="QLabel" name="label_38">
                                <property name="font">
                                 <font>
@@ -38189,7 +38227,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                </property>
                               </widget>
                              </item>
-                             <item row="1" column="1">
+                             <item row="1" column="2">
                               <widget class="QLineEdit" name="dacRange_awg">
                                <property name="minimumSize">
                                 <size>
@@ -38207,7 +38245,42 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Full scale voltage amplitude.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                                </property>
                                <property name="text">
-                                <string/>
+                                <string>0.7</string>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="4" column="0">
+                              <widget class="QLabel" name="label_43">
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="text">
+                                <string>Sync Marker Out:</string>
+                               </property>
+                              </widget>
+                             </item>
+                             <item row="4" column="2">
+                              <widget class="QLineEdit" name="syncMarker_awg">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>30</width>
+                                 <height>24</height>
+                                </size>
+                               </property>
+                               <property name="font">
+                                <font>
+                                 <family>Arial</family>
+                                 <pointsize>9</pointsize>
+                                </font>
+                               </property>
+                               <property name="toolTip">
+                                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Full scale voltage amplitude.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                               </property>
+                               <property name="text">
+                                <string>1.2</string>
                                </property>
                               </widget>
                              </item>
@@ -38447,7 +38520,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                               </widget>
                              </item>
                              <item row="3" column="1">
-                              <widget class="QLineEdit" name="lineEdit">
+                              <widget class="QLineEdit" name="sampleMarker_vsg">
                                <property name="minimumSize">
                                 <size>
                                  <width>30</width>
@@ -38469,7 +38542,7 @@ QPushButton:hover{background-color:qlineargradient(spread:pad, x1:1, y1:1, x2:1,
                               </widget>
                              </item>
                              <item row="4" column="1">
-                              <widget class="QLineEdit" name="lineEdit_2">
+                              <widget class="QLineEdit" name="syncMarker_vsg">
                                <property name="minimumSize">
                                 <size>
                                  <width>30</width>
